# jrcf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
src/jrcf/: __init__.py  rcf.py
tests/: rcf_cuncurrent_test.py  rcf_test.py
tests/artifact/: jsonpickle-0_4_0.json  pickle-0_4_0.pkl  skops-0_4_0.skops
