[project]
name = "jrcf"
version = "0.1.0-dev.0"
description = "AWS's Java Rancom Cut Forest"
authors = [
    { name = "Dowon", email = "ks2515@naver.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = []
